# unified_campus_intelligence_dashboard_with_aiassist

./: README.md  requirements.txt  server.py
academics/: main.py  pyproject.toml
cafeteria/: main.py  pyproject.toml
events/: main.py  pyproject.toml
frontend/src/: App.jsx  index.css
