[project]
name = "academics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "certifi>=2026.5.20",
    "dnspython>=2.8.0",
    "fastmcp>=3.4.2",
    "pymongo>=4.17.0",
    "pypdf>=6.13.2",
    "requests>=2.34.2",
]
